--- a/main.tex
+++ b/main.tex
@@ -48,6 +48,6 @@
 \subfile{sections/1_introduction.tex}
 
 % bibiliography
-\bibliography{reference.bib}
+\bibliography{references.bib}
 
 \end{document}
