--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -1,3 +1,3 @@
 \section{Introduction}
 
-Introductions are good.
+Introductions are good. Oh look, why don't I cite myself \cite{stinchfield2024mixed} (that's not egotistical at all).
